Final push for wavelab presentation

--- a/presentations/wavelab_intro/index.html
+++ b/presentations/wavelab_intro/index.html
@@ -242,14 +242,6 @@ class: title_page, inverse
 
 layout: false
 
-# Evolutionary Algorithm - General Idea
-
-.center[
-    ![evolutionary algorithm form](./images/evolutionary_algorithm.png)
-]
-
----
-
 .left-column[
 ## Evolutionary Algorithm Requirements
 ### - Input Data
@@ -333,6 +325,13 @@ For example:
 Operators.
 ]
 
+---
+
+# Evolutionary Algorithm - General Idea
+
+.center[
+    ![evolutionary algorithm form](./images/evolutionary_algorithm.png)
+]
 
 ---
 
@@ -359,23 +358,6 @@ Similar to Curve Fitting, the goal is to find the best model that fits the data
 
 .center[
     ![symbolic regression](./images/symbolic_regression.png)
-]
-]
-
----
-
-.left-column[
-## Example Applications
-### - Symbolic Regression
-]
-
-.right-column[
-### Symbolic Regression
-To perform Symbolic Regression, we represent the candidate solutions (i.e. an
-equation) in the form of a Tree Data Structure.
-
-.center[
-    ![gp tree](./images/gp_tree.png)
 ]
 ]
 
@@ -450,6 +432,31 @@ Demo of [playground](http://github.com/chutsu/playground) solving toy problems
     allowfullscreen
 >
 </iframe>
+]
+
+---
+
+.left-column[
+## Example Applications
+### - Symbolic Regression
+### - Classification
+### - Neuro Evolution
+### - Robotic Controls
+]
+
+.right-column[
+### Robotic Controls
+
+.center[
+<iframe
+    width="500"
+    height="300"
+    src="//www.youtube.com/embed/V2ADU8YWIug"
+    frameborder="0"
+    allowfullscreen>
+</iframe>
+
+]
 ]
 
 ---
