--- a/index.html
+++ b/index.html
@@ -182,6 +182,11 @@
         </ul>
     </section>
 
+    <section id="about">
+
+
+    </section>
+
 
     <!-- MATHJAX -->
     <!-- <script type="text/x&#45;mathjax&#45;config"> -->
