--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         frameborder="0" allowfullscreen></iframe>
 
       <p>My team and I devised a novel camera to gimbal camera extrinsics
-      calibration. In this project I Designed and built a custom quadrotor with
+      calibration. In this project I designed and built a custom quadrotor with
       a gimbal camera using off the shelf components. The custom built quadrotor
       is one of a kind, (as of Nov, 2017) there is no quadrotor on the consumer
       market that allows the developer to control the gimbal camera and obtain
