Add cv and email

--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
     Waslander</a> at the University of Waterloo, Canada. My current research
     focus is on realtime visual odometry specifically for quadrotors where
     compute resources are limited. </p>
+
+    <div id="cv_button">My resume: <a href="./docs/cv.pdf">download</a></div>
+    <div id="contact_button">My email: chutsu(at)gmail.com</div>
   </div>
 
   <div id="projects">
