--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       live image data during flight (DJI's limted API only allows programs to
       access photos and video stream after flight,
       <a href="https://developer.dji.com/onboard-api-reference/classDJI_1_1OSDK_1_1Camera.html">
-        see here.</a>
+        see here</a>)
       </p>
 
     </div>
