Add genetic programming to portfolio

--- a/index.html
+++ b/index.html
@@ -240,14 +240,41 @@
         <center>
           <img onclick="overlay_on(this)" width="133" src="images/anastasia/landing.png"></img>
           <img onclick="overlay_on(this)" height="75" src="images/anastasia/anastasia.jpg"></img>
-          <img onclick="overlay_on(this)" width="100" src="images/illum_invar_apriltag/grey_apriltag.png"></img>
-          <img onclick="overlay_on(this)" width="100" src="images/illum_invar_apriltag/grey_illum_invar.png"></img>
+          <img onclick="overlay_on(this)" height="75" src="images/illum_invar_apriltag/flashlight_original.png"></img>
+          <img onclick="overlay_on(this)" height="75" src="images/illum_invar_apriltag/flashlight_illum_invar.png"></img>
         </center>
       </div>
     </div>
-  <div>
 
+    <div class="project">
+      <ul>
+        <li class="title">Symbolic Regression</li>
+        <li class="date">(Sep 2014 - Sep 2015: 1 year)</li>
+      </ul>
 
+      <iframe width="500" height="280"
+        src="https://www.youtube.com/embed/dPjBrLjSBl4"
+        frameborder="0" allowfullscreen></iframe>
+
+      <p>Symbolic Regression (SR) is a very special kind of regression,
+      contrary to statistical regression where the user has to choose a model
+      (linear or non-linear) and perform least squares to tune the model
+      parameters, symbolic regression regresses the mathematical variables,
+      constants and functions to best fit the data. Genetic Programming is one
+      approach to SR, it uses a tree data structure to represent a solution and 
+      over a number of iterations it aims to modify the solution such that the
+      cost is minizmized.
+      </p>
+
+      <div class="slideshow">
+        <center>
+          <img onclick="overlay_on(this)" height="75" src="images/symbolic_regression/symbolic_regression.png"></img>
+          <img onclick="overlay_on(this)" height="75" src="images/symbolic_regression/gp_tree.png"></img>
+          <img onclick="overlay_on(this)" height="75" src="images/symbolic_regression/gp_crossover.png"></img>
+        </center>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
