--- a/index.html
+++ b/index.html
@@ -260,10 +260,10 @@
       contrary to statistical regression where the user has to choose a model
       (linear or non-linear) and perform least squares to tune the model
       parameters, symbolic regression regresses the mathematical variables,
-      constants and functions to best fit the data. Genetic Programming is one
-      approach to SR, it uses a tree data structure to represent a solution and 
-      over a number of iterations it aims to modify the solution such that the
-      cost is minizmized.
+      constants and functions to best fit the data. I used Genetic Programming
+      to solve this problem, it uses a tree data structure to represent a
+      solution and over a number of iterations it aims to modify the solution
+      such that the cost is minizmized.
       </p>
 
       <div class="slideshow">
