--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <style>
     body {
-      width: 42em;
+      width: 50em;
       margin-left: auto;
       margin-right: auto;
       margin-top: 5em;
@@ -39,6 +39,10 @@
 
     div#intro {
       font-size: 1.0em;
+
+      width: 42em;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     div#intro p {
@@ -52,6 +56,10 @@
 
     div#projects {
       float: clear;
+
+      width: 45em;
+      margin-left: auto;
+      margin-right: auto;
       margin-top: 5.0em;
     }
 
@@ -72,14 +80,22 @@
 
     div#projects div.project p {
       font-size: 1.1em;
+
+      width: 35.5em;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     div#projects div.project ul {
       display: inline-block;
-      width: 100%;
       list-style: none;
-      margin: 0;
+      width: 100%;
+
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 0;
       margin-bottom: 1.0em;
+
       padding: 0;
     }
 
@@ -101,8 +117,8 @@
     }
 
     div#projects div.project div.slideshow {
-      margin-left: auto;
-      margin-right: auto;
+      <!-- margin&#45;left: auto; -->
+      <!-- margin&#45;right: auto; -->
     }
 
     div#projects div.project div.slideshow img {
@@ -210,10 +226,9 @@
 
       <div class="slideshow">
         <center>
-          <img onclick="overlay_on(this)" width="100" src="images/zazu/1.jpg"></img>
-          <img onclick="overlay_on(this)" width="100" src="images/zazu/2.jpg"></img>
-          <img onclick="overlay_on(this)" width="100" src="images/zazu/3.jpg"></img>
-          <img onclick="overlay_on(this)" width="100" src="images/zazu/4.jpg"></img>
+          <img onclick="overlay_on(this)" height="100" src="images/zazu/1.jpg"></img>
+          <img onclick="overlay_on(this)" height="100" src="images/zazu/2.jpg"></img>
+          <img onclick="overlay_on(this)" height="100" src="images/zazu/3.jpg"></img>
         </center>
       </div>
     </div>
@@ -238,10 +253,10 @@
 
       <div class="slideshow">
         <center>
-          <img onclick="overlay_on(this)" width="133" src="images/anastasia/landing.png"></img>
-          <img onclick="overlay_on(this)" height="75" src="images/anastasia/anastasia.jpg"></img>
-          <img onclick="overlay_on(this)" height="75" src="images/illum_invar_apriltag/flashlight_original.png"></img>
-          <img onclick="overlay_on(this)" height="75" src="images/illum_invar_apriltag/flashlight_illum_invar.png"></img>
+          <img onclick="overlay_on(this)" height="100" src="images/anastasia/landing.png"></img>
+          <img onclick="overlay_on(this)" height="100" src="images/anastasia/anastasia.jpg"></img>
+          <img onclick="overlay_on(this)" height="100" src="images/illum_invar_apriltag/flashlight_original.png"></img>
+          <img onclick="overlay_on(this)" height="100" src="images/illum_invar_apriltag/flashlight_illum_invar.png"></img>
         </center>
       </div>
     </div>
@@ -263,14 +278,13 @@
       constants and functions to best fit the data. I used Genetic Programming
       to solve this problem, it uses a tree data structure to represent a
       solution and over a number of iterations it aims to modify the solution
-      such that the cost is minizmized.
-      </p>
+      such that the cost is minizmized.</p>
 
       <div class="slideshow">
         <center>
-          <img onclick="overlay_on(this)" height="75" src="images/symbolic_regression/symbolic_regression.png"></img>
-          <img onclick="overlay_on(this)" height="75" src="images/symbolic_regression/gp_tree.png"></img>
-          <img onclick="overlay_on(this)" height="75" src="images/symbolic_regression/gp_crossover.png"></img>
+          <img onclick="overlay_on(this)" height="100" src="images/symbolic_regression/symbolic_regression.png"></img>
+          <img onclick="overlay_on(this)" height="100" src="images/symbolic_regression/gp_tree.png"></img>
+          <img onclick="overlay_on(this)" height="100" src="images/symbolic_regression/gp_crossover.png"></img>
         </center>
       </div>
     </div>
