--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
     }
 
     div#projects div.project div.slideshow {
-      <!-- margin&#45;left: auto; -->
-      <!-- margin&#45;right: auto; -->
+      margin-left: auto;
+      margin-right: auto;
     }
 
     div#projects div.project div.slideshow img {
-      margin-left: 0.1em;
-      margin-right: 0.1em;
+      margin-left: 0.3em;
+      margin-right: 0.3em;
       border-radius: 0.2em;
     }
 
