--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>chutsu</title>
+  <title>Christopher Choi</title>
 
   <style>
     body {
@@ -122,8 +122,11 @@
     }
 
     div#projects div.project div.slideshow img {
+			max-height: 8.0em;
+
       margin-left: 0.3em;
       margin-right: 0.3em;
+
       border-radius: 0.2em;
     }
 
@@ -237,9 +240,9 @@
 
       <div class="slideshow">
         <center>
-          <img onclick="overlay_on(this)" height="100" src="images/zazu/1.jpg"></img>
-          <img onclick="overlay_on(this)" height="100" src="images/zazu/2.jpg"></img>
-          <img onclick="overlay_on(this)" height="100" src="images/zazu/3.jpg"></img>
+          <img onclick="overlay_on(this)" src="images/zazu/1.jpg"></img>
+          <img onclick="overlay_on(this)" src="images/zazu/2.jpg"></img>
+          <img onclick="overlay_on(this)" src="images/zazu/3.jpg"></img>
         </center>
       </div>
     </div>
@@ -264,10 +267,10 @@
 
       <div class="slideshow">
         <center>
-          <img onclick="overlay_on(this)" height="100" src="images/anastasia/landing.png"></img>
-          <img onclick="overlay_on(this)" height="100" src="images/anastasia/anastasia.jpg"></img>
-          <img onclick="overlay_on(this)" height="100" src="images/illum_invar_apriltag/flashlight_original.png"></img>
-          <img onclick="overlay_on(this)" height="100" src="images/illum_invar_apriltag/flashlight_illum_invar.png"></img>
+          <img onclick="overlay_on(this)" src="images/anastasia/landing.png"></img>
+          <img onclick="overlay_on(this)" src="images/anastasia/anastasia.jpg"></img>
+          <img onclick="overlay_on(this)" src="images/illum_invar_apriltag/flashlight_original.png"></img>
+          <img onclick="overlay_on(this)" src="images/illum_invar_apriltag/flashlight_illum_invar.png"></img>
         </center>
       </div>
     </div>
@@ -293,9 +296,9 @@
 
       <div class="slideshow">
         <center>
-          <img onclick="overlay_on(this)" height="100" src="images/symbolic_regression/symbolic_regression.png"></img>
-          <img onclick="overlay_on(this)" height="100" src="images/symbolic_regression/gp_tree.png"></img>
-          <img onclick="overlay_on(this)" height="100" src="images/symbolic_regression/gp_crossover.png"></img>
+          <img onclick="overlay_on(this)" src="images/symbolic_regression/symbolic_regression.png"></img>
+          <img onclick="overlay_on(this)" src="images/symbolic_regression/gp_tree.png"></img>
+          <img onclick="overlay_on(this)" src="images/symbolic_regression/gp_crossover.png"></img>
         </center>
       </div>
     </div>
