--- a/index.html
+++ b/index.html
@@ -304,5 +304,9 @@
     </div>
   </div>
 
+  <div id="presentations">
+    <a href="https://docs.google.com/presentation/d/1xhEOOvBvG4eSlEwBfeWOEMeYwbFUlQOXvSzioFX99bE/edit#slide=id.p2">Towards  Robust  Autonomous MAV Landing With a Gimbal Camera</a>
+  </div>
+
 </body>
 </html>
