--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     focus is on realtime visual odometry specifically for quadrotors where
     compute resources are limited. </p>
 
-    <div id="cv_button">My resume: <a href="docs/cv.pdf">download</a></div>
+    <div id="cv_button">My resume: <a href="docs/cv/cv.pdf">download</a></div>
     <div id="contact_button">My email: chutsu(at)gmail.com</div>
   </div>
 
