--- a/index.html
+++ b/index.html
@@ -195,21 +195,26 @@
 
 </head>
 <body>
-
   <div id="intro">
     <img id="photo_me" alt="Me" src="../images/me.jpg">
-    <p> Hello, my name is <b id="name">Christoper Choi</b> I am a Master
-    student from the <a href="http://wavelab.uwaterloo.ca/">WAVELab</a>
-    currently supervised by
-    <a href="http://wavelab.uwaterloo.ca/?page_id=593">Prof Steven
-    Waslander</a> at the University of Waterloo, Canada. My current research
-    focus is on realtime visual odometry specifically for quadrotors where
-    compute resources are limited. </p>
+    <p> Hello, my name is <b id="name">Christoper Choi</b>.
+    I am PhD student at the
+    <a href="http://wp.doc.ic.ac.uk/sleutene/">
+      Smart Robotics Lab
+    </a>
+    supervised by
+    <a href="https://www.imperial.ac.uk/people/s.leutenegger">
+      Dr. Stefan Leutenegger
+    </a>
+    at
+    <a href="https://www.imperial.ac.uk/">Imperial College London</a>.
+
+    My current research focus is on localization and mapping algorithms for
+    micro-aerial vehicles. </p>
 
     <div id="cv_button">My resume: <a href="docs/cv/cv.pdf">download</a></div>
     <div id="contact_button">My email: chutsu(at)gmail.com</div>
   </div>
-
 
   <div id="overlay" onclick="overlay_off()">
     <img id="overlay-image" src="images/zazu/DSC_8369.JPG"></img>
