--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
   <div id="intro">
     <img id="photo_me" alt="Me" src="../images/me.jpg">
     <p> Hello, my name is <b id="name">Christoper Choi</b>.
-    I am PhD student at the
+    I am a PhD student at the
     <a href="http://wp.doc.ic.ac.uk/sleutene/">
       Smart Robotics Lab
     </a>
@@ -208,9 +208,7 @@
     </a>
     at
     <a href="https://www.imperial.ac.uk/">Imperial College London</a>.
-
-    My current research focus is on localization and mapping algorithms for
-    micro-aerial vehicles. </p>
+    My current research focus is on SLAM for micro-aerial vehicles. </p>
 
     <div id="cv_button">My resume: <a href="docs/cv/cv.pdf">download</a></div>
     <div id="contact_button">My email: chutsu(at)gmail.com</div>
